--- a/src/styles/accordion.scss
+++ b/src/styles/accordion.scss
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap");
 
+path {
+  align-items: right;
+}
+
 .accordion_section {
   display: flex;
   flex-direction: column;
