--- a/src/styles/accordion.scss
+++ b/src/styles/accordion.scss
@@ -1,58 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap");
-
-path {
-  align-items: right;
+.Accordion {
+  color: #000;
 }
 
-.accordion_section {
-  display: flex;
-  flex-direction: column;
-  width: 60rem;
-}
-
-.accordion {
-  background-color: rgb(59, 59, 59);
-  color: rgb(134, 134, 134);
-  cursor: pointer;
-  padding: 18px;
-  display: flex;
-  align-items: center;
-  border: none;
-  outline: none;
-  transition: background-color 0.6s ease;
-  width: 60rem;
-}
-
-.accordion:hover,
-.active {
-  background-color: rgb(167, 167, 167);
-}
-
-.accordion_title {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 600;
-  font-size: 14px;
-}
-
-.accordion_icon {
-  margin-left: auto;
-  transition: transform 0.6s ease;
-}
-
-.rotate {
-  transform: rotate(90deg);
-}
-
-.accordion_content {
-  background-color: rgb(141, 141, 141);
-  overflow: hidden;
-  transition: max-height 0.6s ease;
-  width: 60rem;
-}
-
-.accordion_text {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  padding: 18px;
+.Accordion_back {
+  background-color: rgb(187, 187, 187)
 }
