Adicionando Todo list

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,7 +5,14 @@
   margin: 0px;
   padding: 0px;
   font-family: 'Open Sans', sans-serif;
-  color: white;
+  
+  article {
+    color: white;
+
+    a {
+      color: white;
+    }
+  }
 }
 
 header {
